examples/datalog/10_edge_cases/120_empty_aggregation_result.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_empty_agg
Knowledge graph 'test_empty_agg' created.
Switched to knowledge graph: test_empty_agg
> .kg use test_empty_agg
Switched to knowledge graph: test_empty_agg
> +numbers[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'numbers'.
> big_sum(<SUM:X>) :- numbers(X), X > 100.
Script error: Parse error: Unknown aggregate function: 
